Add default Google Maps URL in index.html form

--- a/templates/index.html
+++ b/templates/index.html
@@ -193,7 +193,9 @@
             <div class="form-group">
                 <label for="maps_url">Google Maps URL:</label>
                 <input type="text" id="maps_url" name="maps_url"
-                    placeholder="https://maps.app.goo.gl/... または https://www.google.com/maps/..." required>
+                    placeholder="https://maps.app.goo.gl/... または https://www.google.com/maps/..." 
+                    value="https://maps.app.goo.gl/NbcxP8VHgWrXoDPL7"
+                    required>
             </div>
             <button type="submit">マーカーを追加</button>
         </form>
